# promotion

./: Cargo.toml  README.md  canister_ids.json  dfx.json
src/promotion/: Cargo.toml  promotion.did
src/promotion/src/: conditions.rs  init.rs  inspect_message.rs  ledger.rs  lib.rs  owner.rs  promotion.rs  tools.rs
src/promotion/src/canisters/: canister.rs  ext.rs  mod.rs
