[package]
name = "promotion"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
serde = "1.0"
ic-ledger-types = "0.1.1"
ic-types = { git = "https://github.com/dfinity/ic"}
dfn_core = { git = "https://github.com/dfinity/ic"}
dfn_protobuf = { git = "https://github.com/dfinity/ic"}
ledger-canister = { git = "https://github.com/dfinity/ic"}
ic-nns-constants = { git = "https://github.com/dfinity/ic"}
